--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@voloshinskii/kekui",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -26,7 +26,8 @@
     "react": "^16.8.6",
     "resolve-from": "^5.0.0",
     "sass-resources-loader": "^2.0.0",
-    "style-loader": "^0.23.1"
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
