--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "@voloshinskii/kekui",
-  "version": "1.2.0",
+  "version": "1.3.3",
   "main": "dist/index.js",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/ruinername/kekui.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack --watch",
