--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@voloshinskii/kekui",
-  "version": "1.4.8-2",
+  "version": "2.0.0",
   "main": "dist/index.js",
   "repository": {
     "type" : "git",
