--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@voloshinskii/kekui",
-  "version": "2.0.3",
+  "version": "2.0.5",
   "main": "dist/index.js",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/ruinername/kekui.git"
+    "type": "git",
+    "url": "https://github.com/ruinername/kekui.git"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -54,5 +54,8 @@
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0"
   },
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "webfontloader": "^1.6.28"
+  }
 }
